--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -23,7 +24,8 @@
     "react-scripts": "5.0.1",
     "serve": "^14.2.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.12.11"
   }
 }
